Version 0.2
-----------

  * Cleaned up organisation of docs source files.


Version 0.1.1
-------------

  * Updated the ebird scraper so the breakdown of a count by age and sex
    extracted from the checklist web page has an identifier with the form
    DET<id> where <id> is a two-digit integer created from the index of
    the cell in the table.

  * Checklists are now saved in JSON format with an indent of 4 to make them
    easier to read (and debug).

Version 0.1
-----------

  * Renamed the constant used to identify the version number of the downloaded
    checklists from CHECKLIST_FILE_FORMAT_VERSION to CHECKLISTS_DOWNLOAD_FORMAT.
    Similarly renamed CHECKLIST_FILE_LANGUAGE to CHECKLISTS_DOWNLOAD_LANGUAGE.
  * Renamed the project and the main module to checklists_scrapers. The
    project is part of a group designed to work with the django-checklists
    database and the association is clearer with the change in name.
  * Changed the licence from GPLv3 to BSD so it is compatible with the other
    projects in the checklists "group".
  * Changes the prefix used on the environment variables from "CHECKLISTING"
    to "CHECKLISTS" to minimise the number that must be set when used the
    scrapers with the django-checklists app.
  * Added scripts to run the site tests for each scraper. This makes it
    easier to pass in the parameters for the site to be scraped rather than
    defining them in the settings.
  * Configuring the scrapers is now done through environment variables rather
    than a local settings file. This makes it much easier to install and run
    the scrapers, particularly from the most common use-case of calling them
    from cron or a similar scheduler.
  * Removed the scrapy project file since the settings file will typically be
    set using an environment variable.
  * Fixed the version of scrapy to use, to 0.16.4 for now, since there are
    (distracting), deprecated calls when using the latest version (0.20.2).